# let-the-feeds-fly

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-image.yml
app/: db.py  main.py
app/api/: __init__.py  feed.py
app/core/: __init__.py  config.py  logger.py
app/formats/: __init__.py  atom.py  handler.py  jsonfeed.py  rss2.py
app/schemas/: __init__.py  feed.py
app/services/: fetcher.py
app/utils/: feed.py  time.py
tests/: __init__.py
